--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
-== README
+keyfree
+=======
+NAME OF APP: KEY FREE
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+SHORT DESCRIPTION: This app will list LA restaurants with a free or small corkage fee.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+FEATURES:
+*Search by zip code in the LA area
+*Search by food type
+*Search within corkage fee ranges (e.g.- free, <$5, $5-10, $10-15, >$15) 
+*Find wine stores in your zip code
+*Users can login and save or update corkage fee info
